--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "babel-polyfill": "^6.13.0",
     "isomorphic-fetch": "^2.2.1",
+    "moment": "^2.15.1",
     "redux": "^3.6.0",
     "redux-saga": "^0.11.1",
     "redux-thunk": "^2.1.0",
